
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; } ;
struct hostent {scalar_t__ h_addr; } ;


 struct hostent* gethostbyname (char*) ;
 int inet_aton (char*,struct in_addr*) ;
 int printf (char*,char*) ;

int resolv(struct sockaddr_in *addr, char *hostn){
 struct hostent *host;

    if (!inet_aton(hostn, &addr->sin_addr)){
        host = gethostbyname(hostn);
        if (host == ((void*)0)){
            printf("[-] Wasnt able to resolve %s!\n", hostn);
            return -1;
        }
        addr->sin_addr = *(struct in_addr*)host->h_addr;
    }
}
